auth and courses crud plus swagger
